discussion/kv_engine/176460/176460_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Separate setMaxDataSize() into components

We'll re-use many of these components in the BucketQuotaChangeTask
in future patches. setMaxDataSize() will remain as-is for the sake
of initial quota setting and unit tests that don't work nicely with
an extra task.

Change-Id: Ie0e229f60ec949df0027094e90996876e318f62e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-30 08:39:03.000000000
Message: 
Uploaded patch set 10: Patch Set 9 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-30 09:25:30.000000000
Message: 
Patch Set 10: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47203/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(837): error C2039: "setBucketQuotaChangeTaskWaitTime": is not a member of "Configuration" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47203/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18437/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:837:27: error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration" [clang-diagnostic-error]
            configuration.setBucketQuotaChangeTaskWaitTime(std::stoul(val));
                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18437/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18437/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39653/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39653/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28700/ : FAILURE

Compile error at [2022-06-30T08:55:46.079Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28700/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8111/ : FAILURE

Compile error at [2022-06-30T08:50:48.914Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8111/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21309/ : FAILURE

Compile error at [2022-06-30T08:52:45.958Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21309/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20323/ : FAILURE

Compile error at [2022-06-30T08:52:23.174Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20323/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8210/ : FAILURE

Compile error at [2022-06-30T08:54:35.708Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8210/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19543/ : FAILURE

Compile error at [2022-06-30T09:25:13.658Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19543/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20667/ : FAILURE

Compile error at [2022-06-30T09:06:26.251Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20667/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17589/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
